# embassy-f446

./: Cargo.toml  Embed.toml  run-log
.cargo/: config.toml
src/: main.rs
