[package]
name = "app"
version = "0.1.0"
edition = "2021"
default-run = "app"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features =  ["defmt", "time-driver-any", "stm32f446re", "memory-x", "unstable-pac", "exti"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" , features = ["defmt", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"

assign-resources = "0.4.1"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
static_cell = "2.0.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
